# zubale-ml-test

./: README.md  design_gcp.md  main.py  pyproject.toml
.github/workflows/: ci.yml
artifacts/: agent_plan.yaml  feature_importances.csv  metrics.json  model_keras.keras  preprocessor.pkl
data/: drift_latest.json
docker/: .dockerignore  Dockerfile  entrypoint.sh
src/: agent_monitor.py  app.py  drift.py  features.py  io_schemas.py  metrics.py  models.py  train.py
tests/: sample.json  test_inference.py  test_training.py
